# flyingdisc

./: .gitignore  README.md  main.py  pyproject.toml
flyingdisc/: __init__.py  discordapplicationcommands.py  discordtypes.py  slash.py  utils.py
