[tool.poetry]
name = "flyingdisc"
version = "0.1.3"
description = "Minimal discord types"
authors = ["esnyder <es@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
cryptography = "^41.0.5"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
